--- a/privacy-policy/privacy.html
+++ b/privacy-policy/privacy.html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <div class="legal-page">
-        <a href="index.html" class="back-link">← Back to Home</a>
+        <a href="./index.html" class="back-link">← Back to Home</a>
 
         <h1>Privacy Policy</h1>
         <p class="last-updated">Last Updated: February 26, 2026</p>
@@ -309,4 +309,5 @@
         </div>
     </footer>
 </body>
+
 </html>
