--- a/terms-and-conditions/terms.html
+++ b/terms-and-conditions/terms.html
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div class="legal-page">
-        <a href="index.html" class="back-link">← Back to Home</a>
+        <a href="./index.html" class="back-link">← Back to Home</a>
 
         <h1>Terms of Service</h1>
         <p class="last-updated">Last Updated: February 26, 2026</p>
@@ -294,4 +294,5 @@
         </div>
     </footer>
 </body>
+
 </html>
