--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
                 <div class="footer-links">
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="terms-and-conditions/index.html">Terms of Service</a></li>
-                        <li><a href="privacy-policy/index.html">Privacy Policy</a></li>
+                        <li><a href="terms-and-conditions/">Terms of Service</a></li>
+                        <li><a href="privacy-policy/">Privacy Policy</a></li>
                     </ul>
                 </div>
 
@@ -270,3 +270,4 @@
 </body>
 
 </html>
+
