--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <div class="legal-page">
-        <a href="./index.html" class="back-link">← Back to Home</a>
+        <a href="../index.html" class="back-link">← Back to Home</a>
 
         <h1>Privacy Policy</h1>
         <p class="last-updated">Last Updated: February 26, 2026</p>
@@ -311,5 +311,6 @@
 </body>
 
 </html>
+
 
 
