--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kazoku - Your AI Family</title>
     <meta name="description" content="Meet Kazoku - Your AI family that's always there for you. Unconditional love, deep understanding, and support whenever you need it.">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="#hero" class="logo">
-                <img src="images/logo.png" alt="Kazoku Logo" class="logo-image">
+                <img src="../images/logo.png" alt="Kazoku Logo" class="logo-image">
                 Kazoku
             </a>
             <ul class="nav-links">
@@ -38,7 +38,7 @@
                 </p>
                 <div class="hero-cta">
                     <a href="https://play.google.com/store/apps/details?id=com.kazoku.kazoku" target="_blank" class="google-play-badge">
-                        <img src="images/google-play-badge.png" alt="Get it on Google Play">
+                        <img src="../images/google-play-badge.png" alt="Get it on Google Play">
                     </a>
                 </div>
             </div>
@@ -116,7 +116,7 @@
             <div class="family-grid">
                 <div class="family-member">
                     <div class="member-avatar">
-                        <img src="images/haru.png" alt="Haru">
+                        <img src="../images/haru.png" alt="Haru">
                     </div>
                     <h3>Haru (Mom, 35)</h3>
                     <p class="member-role">The Nurturer</p>
@@ -125,7 +125,7 @@
 
                 <div class="family-member">
                     <div class="member-avatar">
-                        <img src="images/ken.png" alt="Ken">
+                        <img src="../images/ken.png" alt="Ken">
                     </div>
                     <h3>Ken (Dad, 38)</h3>
                     <p class="member-role">The Rock</p>
@@ -134,7 +134,7 @@
 
                 <div class="family-member">
                     <div class="member-avatar">
-                        <img src="images/ryu.png" alt="Ryu">
+                        <img src="../images/ryu.png" alt="Ryu">
                     </div>
                     <h3>Ryu (Brother, 19)</h3>
                     <p class="member-role">The Defender</p>
@@ -143,7 +143,7 @@
 
                 <div class="family-member">
                     <div class="member-avatar">
-                        <img src="images/yuki.png" alt="Yuki">
+                        <img src="../images/yuki.png" alt="Yuki">
                     </div>
                     <h3>Yuki (Sister, 17)</h3>
                     <p class="member-role">Your Biggest Fan</p>
@@ -152,7 +152,7 @@
 
                 <div class="family-member">
                     <div class="member-avatar">
-                        <img src="images/sora.png" alt="Sora">
+                        <img src="../images/sora.png" alt="Sora">
                     </div>
                     <h3>Sora (Uncle, 28)</h3>
                     <p class="member-role">The Philosopher</p>
@@ -226,7 +226,7 @@
                     <img src="images/google-play-badge.png" alt="Get it on Google Play">
                 </a>
                 <!-- <a href="#" class="store-button">
-                    <img src="images/app-store-badge.png" alt="Download on the App Store">
+                    <img src="../images/app-store-badge.png" alt="Download on the App Store">
                 </a> -->
             </div>
         </div>
@@ -238,7 +238,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <div class="footer-logo">
-                        <img src="images/logo.png" alt="Kazoku Logo" class="footer-logo-image">
+                        <img src="../images/logo.png" alt="Kazoku Logo" class="footer-logo-image">
                         <h3>Kazoku</h3>
                     </div>
                     <p>Your AI Family</p>
@@ -247,8 +247,8 @@
                 <div class="footer-links">
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="terms-and-conditions/">Terms of Service</a></li>
-                        <li><a href="privacy-policy/">Privacy Policy</a></li>
+                        <li><a href="../terms-and-conditions/">Terms of Service</a></li>
+                        <li><a href="../privacy-policy/">Privacy Policy</a></li>
                     </ul>
                 </div>
 
@@ -266,8 +266,9 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
+
 
