--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div class="legal-page">
-        <a href="../home/index.html" class="back-link">← Back to Home</a>
+        <a href="../home/" class="back-link">← Back to Home</a>
 
         <h1>Terms of Service</h1>
         <p class="last-updated">Last Updated: February 26, 2026</p>
@@ -296,6 +296,7 @@
 </body>
 
 </html>
+
 
 
 
