--- a/home/index.html
+++ b/home/index.html
@@ -226,7 +226,7 @@
                     <img src="images/google-play-badge.png" alt="Get it on Google Play">
                 </a>
                 <!-- <a href="#" class="store-button">
-                    <img src="../images/google-store-badge.png" alt="Download on Google Play">
+                    <img src="../images/google-store-badge.png" alt="Get it on Google Play">
                 </a> -->
             </div>
         </div>
