--- a/home/index.html
+++ b/home/index.html
@@ -225,9 +225,9 @@
                 <a href="https://play.google.com/store/apps/details?id=com.kazoku.kazoku" class="store-button" target="_blank">
                     <img src="images/google-play-badge.png" alt="Get it on Google Play">
                 </a>
-                <!-- <a href="#" class="store-button">
+                <a href="#" class="store-button">
                     <img src="../images/google-play-badge.png" alt="Get it on Google Play">
-                </a> -->
+                </a>
             </div>
         </div>
     </section>
@@ -270,6 +270,7 @@
 </body>
 
 </html>
+
 
 
 
