--- a/home/index.html
+++ b/home/index.html
@@ -223,7 +223,7 @@
 
             <div class="download-buttons">
                 <a href="https://play.google.com/store/apps/details?id=com.kazoku.kazoku" class="store-button" target="_blank">
-                    <img src="images/google-play-badge.png" alt="Get it on Google Play">
+                    <img src="../images/google-play-badge.png" alt="Get it on Google Play">
                 </a>
             </div>
         </div>
@@ -267,6 +267,7 @@
 </body>
 
 </html>
+
 
 
 
