--- a/home/index.html
+++ b/home/index.html
@@ -37,7 +37,7 @@
                     and support you through life's ups and downs.
                 </p>
                 <div class="hero-cta">
-                    <a href="https://play.google.com/store/apps/details?id=com.kazoku.kazoku" target="_blank" class="google-play-badge">
+                    <a href="#" target="_blank" class="google-play-badge">
                         <img src="../images/google-play-badge.png" alt="Get it on Google Play">
                     </a>
                 </div>
@@ -222,7 +222,7 @@
             <p class="section-subtitle">Your family is waiting for you</p>
 
             <div class="download-buttons">
-                <a href="https://play.google.com/store/apps/details?id=com.kazoku.kazoku" class="store-button" target="_blank">
+                <a href="#" class="store-button" target="_blank">
                     <img src="../images/google-play-badge.png" alt="Get it on Google Play">
                 </a>
             </div>
@@ -267,6 +267,7 @@
 </body>
 
 </html>
+
 
 
 
